Room: As a administrator I want there to be a way to change the details of a room by the room number[#186232055]
